--- a/client/user/test/mealorder/meal-order-client-app_test.html
+++ b/client/user/test/mealorder/meal-order-client-app_test.html
@@ -69,25 +69,6 @@
         });
 
 
-        test('should instantiate the `app-toolbar` with data-page `menu`' +
-            ' and the component `app-toolbar-content` with routing title', function () {
-            setLocation('/#/menu/2018-03-23');
-            const elementShadowRoot = component.shadowRoot;
-            const toolBar = elementShadowRoot.querySelector(".app-toolbar-content");
-            assert.equal(toolBar.innerHTML, 'Заказ');
-
-        });
-
-        test('should instantiate the `app-toolbar` with data-page `menu`' +
-            ' and day, and day of the week', function () {
-            setLocation('/#/menu/2018-03-23');
-            const elementShadowRoot = component.shadowRoot;
-            const day = elementShadowRoot.querySelector("#day");
-            const dayOfTheWeek = elementShadowRoot.querySelector("#day-of-the-week");
-            assert.equal(day.innerHTML, 'Пятница');
-            assert.equal(dayOfTheWeek.innerHTML, '23');
-        });
-
         test('should instantiate the `app-header` with main-title', function () {
             const elementShadowRoot = component.shadowRoot;
             const mainTitle = elementShadowRoot.querySelector("#main-title");
@@ -96,11 +77,9 @@
 
         test('should instantiate the `app-toolbar` with data-page `menu` with routing title', function (done) {
             setLocation('/#/menu/2018-03-23');
-
             const pages = component.shadowRoot.querySelector('#app-header-iron');
             pages.forceSynchronousItemUpdate();
-
-            const routeLinkTitle = pages.selectedItem.getElementsByClassName("title-link").item(0).innerHTML;
+            const routeLinkTitle = pages.selectedItem.getElementsByClassName("route-title").item(0).innerHTML;
             flush(function () {
                 assert.equal(routeLinkTitle, 'История заказов');
                 done();
@@ -109,41 +88,70 @@
 
         test('should instantiate the `app-toolbar` with data-page `history` with routing title', function (done) {
             setLocation('/#/history/2018-03-23');
-
             const pages = component.shadowRoot.querySelector('#app-header-iron');
             pages.forceSynchronousItemUpdate();
-
-            const routeLinkTitle = pages.selectedItem.getElementsByClassName("title-link").item(0).innerHTML;
+            const routeLinkTitle = pages.selectedItem.getElementsByClassName("route-title").item(0).innerHTML;
             flush(function () {
                 assert.equal(routeLinkTitle, 'Сделать заказ');
                 done();
             });
         });
 
-        test('should instantiate the `meal-order-menu-container` component ' +
-            'with data-page `menu`', function (done) {
+        test('should instantiate the `app-toolbar` with data-page `menu`' +
+            ' and the component `app-toolbar-content` with routing title', function (done) {
             setLocation('/#/menu/2018-03-23');
-            const elementShadowRoot = component.shadowRoot;
-            const menuContainer = elementShadowRoot.querySelector("meal-order-menu-container");
+            const pages = component.shadowRoot.querySelector('#app-drawer-iron');
+            pages.forceSynchronousItemUpdate();
+            const routeLinkTitle = pages.selectedItem.getElementsByClassName("app-toolbar-content").item(0).innerHTML;
             flush(function () {
-                assert.isNotNull(menuContainer);
+                assert.equal(routeLinkTitle, 'Заказ');
                 done();
             });
         });
 
-        test('should instantiate the `meal-order-drawer` component ' +
-            'with data-page `history`', function (done) {
-            setLocation('/#/history/2018-03-23');
-            const elementShadowRoot = component.shadowRoot;
-            const drawer = elementShadowRoot.querySelector("meal-order-drawer");
+        test('should instantiate the `app-toolbar` with data-page `menu`' +
+            ' and day, and day of the week', function (done) {
+            setLocation('/#/menu/2018-03-23');
+            const pages = component.shadowRoot.querySelector('#app-drawer-iron');
+            pages.forceSynchronousItemUpdate();
+            const day = pages.querySelector("#day").innerHTML;
+            const dayOfTheWeek = pages.querySelector("#day-of-the-week").innerHTML;
             flush(function () {
-                assert.isNotNull(drawer);
+                assert.equal(day, 'Пятница');
+                assert.equal(dayOfTheWeek, '23');
                 done();
             });
+        });
+
+        test('should instantiate the `app-toolbar` with data-page `history`' +
+            ' and the component `app-toolbar-content` with routing title', function (done) {
+            setLocation('/#/history/2018-03-23');
+            const pages = component.shadowRoot.querySelector('#app-drawer-iron');
+            pages.forceSynchronousItemUpdate();
+            const routeLinkTitle = pages.selectedItem.getElementsByClassName("app-toolbar-content").item(0).innerHTML;
+            flush(function () {
+                assert.equal(routeLinkTitle, 'История заказов');
+                done();
+            });
+        });
+
+        test('should instantiate the `meal-order-drawer` component', function (done) {
+            const elementShadowRoot = component.shadowRoot;
+            const drawer = elementShadowRoot.querySelector("meal-order-drawer");
+            assert.equal(drawer.tagName.toLocaleLowerCase(), MealOrderDrawer.is);
+            done();
+        });
+
+        test('should instantiate the `meal-order-menu-container` component ' +
+            'with data-page `menu`', function () {
+            setLocation('/#/menu/2018-03-23');
+            const pages = component.shadowRoot.querySelector('#app-header-layout-iron');
+            pages.forceSynchronousItemUpdate();
+            assert.equal(pages.selectedItem.tagName.toLocaleLowerCase(), MealOrderMenuContainer.is);
+
         });
 
     });
 </script>
-
 </body>
 </html>
