Add tests for the `meal-order-drawer` component

--- a/client/user/test/mealorder/meal-order-client-app_test.html
+++ b/client/user/test/mealorder/meal-order-client-app_test.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 
-<test-fixture id="BasicClientApp">
+<test-fixture id="MealOrderClientApp">
     <template>
         <meal-order-client-app></meal-order-client-app>
     </template>
@@ -51,7 +51,7 @@
         let component;
 
         setup(() => {
-            component = fixture('BasicClientApp');
+            component = fixture('MealOrderClientApp');
         });
 
         test('should parse `routeData.page` correctly', function () {
