--- a/client/user/src/mealorder/menu/meal-order-drawer.html
+++ b/client/user/src/mealorder/menu/meal-order-drawer.html
@@ -105,8 +105,7 @@
 
             static get observers() {
                 return [
-                    '_updateDate(outputDate)',
-                    '_changeHistoryUrl(routeData)'
+                    '_changeHistoryUrl(routeData.page)'
                 ];
             }
 
@@ -142,6 +141,7 @@
                     newRouteData.page = 'history';
                     newRouteData.date = date.year + "-" + date.month + "-" + date.day;
                     this.set('routeData', newRouteData);
+                    console.log("2");
                 }
             }
         }
