--- a/client/user/test/mealorder/meal-order-drawer_test.html
+++ b/client/user/test/mealorder/meal-order-drawer_test.html
@@ -41,6 +41,7 @@
     </template>
 </test-fixture>
 
+/*global flush */
 <script>
     function setLocation(url) {
         window.history.pushState({}, '', url);
