--- a/client/user/test/mealorder/meal-order-menu-container_test.html
+++ b/client/user/test/mealorder/meal-order-menu-container_test.html
@@ -42,6 +42,7 @@
     </template>
 </test-fixture>
 
+/*global flush */
 <script>
     function setLocation(url) {
         window.history.pushState({}, '', url);
