Add `MealOrderDrawer` component for tests as global

--- a/client/user/test/mealorder/meal-order-client-app_test.html
+++ b/client/user/test/mealorder/meal-order-client-app_test.html
@@ -43,7 +43,7 @@
 </test-fixture>
 
 <script>
-    /*global MealOrderDrawer, MealOrderDrawer*/
+    /*global MealOrderDrawer, MealOrderMenuContainer*/
     /*eslint no-undef: "error"*/
 
     function setLocation(url) {
