--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -42,6 +42,7 @@
 <link rel="import" href="./shell/redux-store.html">
 <link rel="import" href="./menu/meal-order-menu-container.html">
 <link rel="import" href="./menu/meal-order-drawer.html">
+
 <dom-module id="meal-order-client-app">
     <template>
         <style>
@@ -194,7 +195,6 @@
                                        href="/#/history/">
                                         <div class="route-title">История заказов</div>
                                         <div class="icon-container">
-
                                             <iron-icon class="history-icon"
                                                        icon="maps:icons:history"></iron-icon>
 
@@ -243,8 +243,8 @@
          * Main client meal order component.
          *
          * Consists of 2 pages:
-         * 1. A page with vendor menus, and user's shopping cart.
-         * 2. A page with user's history.
+         * 1. A page with the vendor menus and the user's shopping cart.
+         * 2. A page with the user's history.
          *
          * @customElement
          * @polymer
@@ -265,6 +265,7 @@
                         type: Array,
                         statePath: 'currentOrder'
                     },
+
                     /**
                      * User's history for the chosen day.
                      */
@@ -285,7 +286,9 @@
                      *
                      * Used for routing.
                      */
-                    routeData: {},
+                    routeData: {
+                        type: Object,
+                    },
                 }
             }
 
