--- a/client/user/test/mealorder/meal-order-client-app_test.html
+++ b/client/user/test/mealorder/meal-order-client-app_test.html
@@ -30,6 +30,7 @@
     <script src="../../bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../../bower_components/web-component-tester/browser.js"></script>
     <script src="../../node_modules/redux/dist/redux.js"></script>
+    <script src="test_variables.js"></script>
     <link rel="import" href="../../src/mealorder/meal-order-client-app.html">
     <link rel="import" href="../../src/mealorder/menu/meal-order-menu-container.html">
     <link rel="import" href="../../src/mealorder/menu/meal-order-drawer.html">
@@ -53,6 +54,8 @@
 
         setup(() => {
             component = fixture('MealOrderClientApp');
+            MealOrderAppTest.MealOrderDrawer = MealOrderDrawer;
+            MealOrderAppTest.MealOrderMenuContainer = MealOrderMenuContainer;
         });
 
         test('should parse `routeData.page` correctly', function () {
@@ -139,7 +142,7 @@
         test('should instantiate the `meal-order-drawer` component', function (done) {
             const elementShadowRoot = component.shadowRoot;
             const drawer = elementShadowRoot.querySelector("meal-order-drawer");
-            assert.equal(drawer.tagName.toLocaleLowerCase(), MealOrderDrawer.is);
+            assert.equal(drawer.tagName.toLocaleLowerCase(), MealOrderAppTest.MealOrderDrawer.is);
             done();
         });
 
@@ -148,7 +151,7 @@
             setLocation('/#/menu/2018-03-23');
             const pages = component.shadowRoot.querySelector('#app-header-layout-iron');
             pages.forceSynchronousItemUpdate();
-            assert.equal(pages.selectedItem.tagName.toLocaleLowerCase(), MealOrderMenuContainer.is);
+            assert.equal(pages.selectedItem.tagName.toLocaleLowerCase(), MealOrderAppTest.MealOrderMenuContainer.is);
         });
 
     });
