--- a/client/user/src/mealorder/shell/reducers/reducers.html
+++ b/client/user/src/mealorder/shell/reducers/reducers.html
@@ -199,7 +199,8 @@
                 }],
             currentOrder: [],
             orders: [{
-                date: {day: '21', month: '03', year: '2018'}, cart: [{
+                date: {day: '21', month: '03', year: '2018'},
+                cart: [{
                     vendor: "Пюре",
                     dishes: [
                         {title: 'Борщ украинский', price: 35, quantity: 1},
@@ -217,7 +218,9 @@
                     }]
                 }]
             }, {
-                date: {day: '22', month: '03', year: '2018'}, cart: [{
+                date:
+                    {day: '22', month: '03', year: '2018'},
+                cart: [{
                     vendor: "Пюре",
                     dishes: [
                         {title: 'Щи русские', price: 48, quantity: 1},
