--- a/client/user/src/mealorder/shell/actions/user-actions.html
+++ b/client/user/src/mealorder/shell/actions/user-actions.html
@@ -21,6 +21,6 @@
 <script>
     MealOrderApp.UserAction = {
         SET_CURRENT_MENU: "SET_CURRENT_MENU",
-        SET_CURRENT_CART: 'SET_CURRENT_CART',
+        SET_CURRENT_ORDER: 'SET_CURRENT_ORDER',
     }
 </script>
