--- a/client/user/src/mealorder/menu/meal-order-drawer.html
+++ b/client/user/src/mealorder/menu/meal-order-drawer.html
@@ -119,35 +119,26 @@
 
             _changeHistoryUrl() {
                 if (this.routeData.page && this.routeData.page.startsWith("history")) {
-                    const YEAR = 0;
-                    const MONTH = 1;
-                    const DAY = 2;
-
-                    const routeDate = this.routeData.date.split('-');
-                    this.set('inputDate', routeDate[YEAR] + "/" + routeDate[MONTH] + "/" + routeDate[DAY]);
-                    const arr = this.routeData.date.split('-');
-                    const date = {};
-                    date.year = arr[YEAR];
-                    date.month = arr[MONTH];
-                    date.day = arr[DAY];
-                    this.dispatchEvent(new CustomEvent('changed-history-date', {detail: date}));
+                    if (this.routeData.date) {
+                        const routeDate = new Date(this.routeData.date);
+                        this.set('inputDate', routeDate.getFullYear() +
+                            "/" + ("0" + (routeDate.getMonth() + 1)).slice(-2) + "/" + routeDate.getDate());
+                        const date = {};
+                        date.year = routeDate.getFullYear();
+                        date.month = routeDate.getMonth();
+                        date.day = routeDate.getDate();
+                        this.dispatchEvent(new CustomEvent('changed-history-date', {detail: date}));
+                    }
                 }
             }
 
             _updateDate() {
                 if (this.routeData.page && this.routeData.page.startsWith("history")) {
-                    const YEAR = 0;
-                    const MONTH = 1;
-                    const DAY = 2;
-
-                    const arr = this.outputDate.split('/');
-                    const date = {};
-                    date.year = arr[YEAR];
-                    date.month = arr[MONTH];
-                    date.day = arr[DAY];
+                    const date = new Date(this.outputDate.toString());
                     const newRouteData = {};
                     newRouteData.page = 'history';
-                    newRouteData.date = date.year + "-" + date.month + "-" + date.day;
+                    newRouteData.date = date.getFullYear() +
+                        "-" + ("0" + (date.getMonth() + 1)).slice(-2) + "-" + date.getDate();
                     if (newRouteData.date.localeCompare(this.routeData.date) !== 0) {
                         this.set('routeData', newRouteData);
                     }
